tests/errors/pat_resolved_as_fun_err/pat_resolved_as_fun_err.c
#error pat_resolved_as_fun_err:9:8 The name 'f' here is a function, which can't be used as a pattern.
